<resources>
    <string name="app_name">MPlayer</string>
    <string name="audio">Audio</string>
    <string name="directories">Directories</string>
    <string name="cloud">Cloud</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="sort">Sort</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>

    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
