<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_music_note"
            android:title="@string/audio" />

        <item
            android:id="@+id/nav_directories"
            android:icon="@drawable/ic_folder"
            android:title="@string/directories" />

        <item
            android:id="@+id/nav_cloud"
            android:icon="@drawable/ic_cloud"
            android:title="@string/cloud" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
    </group>

    <group
        android:id="@+id/grp_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />

    </group>


</menu>